--- a/RadioM3U/RadioM3U.csproj
+++ b/RadioM3U/RadioM3U.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Jellyfin.Controller" Version="10.9.0" />
     <PackageReference Include="Jellyfin.Model" Version="10.9.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Jellyfin.Plugin.Sdk" Version="10.9.0" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="src/Web/configPage.html">
