--- a/RadioM3U/RadioM3U.csproj
+++ b/RadioM3U/RadioM3U.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Jellyfin.Model" Version="10.10.7" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
     <PackageReference Include="Jellyfin.Common" Version="10.10.7" />
+    <PackageReference Include="Jellyfin.Api" Version="10.10.7" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="src/Web/configPage.html">
