--- a/nuget.config
+++ b/nuget.config
@@ -3,5 +3,6 @@
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="jellyfin" value="https://nuget.jellyfin.org/repository/jellyfin-main/index.json" />
   </packageSources>
 </configuration>
